--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "rxjs": "~7.8.0",
         "sockjs-client": "^1.6.1",
         "stompjs": "^2.3.3",
+        "swiper": "^11.1.4",
         "tslib": "^2.3.0",
         "zone.js": "~0.13.0"
     },
