--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "stompjs": "^2.3.3",
         "swiper": "^11.1.4",
         "tslib": "^2.3.0",
+        "uuid": "^10.0.0",
         "zone.js": "~0.13.0"
     },
     "devDependencies": {
