--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "jspdf-autotable": "^3.8.1",
         "moment": "^2.29.4",
         "net": "^1.0.2",
+        "ngx-infinite-scroll": "^16.0.0",
         "openvidu-browser": "^2.30.0",
         "pdfmake": "^0.2.8",
         "primeflex": "^3.3.1",
